Fix enctype=text/plain implementation

Append CRLF after each data entry instead of only in between pairs.

R=tkent@chromium.org,jochen@chromium.org
BUG=687072

Review-Url: https://codereview.chromium.org/2687863002
Cr-Commit-Position: refs/heads/master@{#449608}

Former-commit-id: 76c9186c1e4d27ef4fb9a3abe72502f5a7b4eb2b