third_party/WebKit/Source/platform/network/FormDataEncoder.cpp
@@ -189,11 +189,10 @@ void FormDataEncoder::addKeyValuePairAsFormData(
     EncodedFormData::EncodingType encodingType,
     Mode mode) {
   if (encodingType == EncodedFormData::TextPlain) {
-    if (!buffer.isEmpty())
-      append(buffer, "\r\n");
     append(buffer, key);
     append(buffer, '=');
     append(buffer, value);
+    append(buffer, "\r\n");
   } else {
     if (!buffer.isEmpty())
       append(buffer, '&');
